--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
-body {
-  background-image: url("../images/repeating.png");
+  body {
+  background-image: url("../images/black.jpg");
   
 }
 
@@ -10,16 +10,107 @@ body {
   border-radius: 12px 12px 0px 0px;
 }
 
-#header
-#header h1
-#header a#logo1 img
-#header #toplink
-#footer
-#content-wrapper
-#main-content
-h2 strong
-.imageR
-#side-content
-#main-nav
-#main-nav ul
-#main-nav ul li
+#header {
+  position: relative;
+  margin-top: 40px;
+  border-radius: 12px 12px 0px 0px;
+}
+
+#header a#logo1 img {
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+#header h1 {
+  position: absolute;
+  left: 420px;
+  top: 5px;
+  font-size: 3em;
+  font-family: 'Devonshire', cursive;
+  color: #E35335;
+}
+
+#main-nav {
+  float: left;
+  width: 100%;
+  background-color: #333;
+}
+
+#main-nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  float: left;
+  position: relative;
+  left:50%;
+}
+
+#main-nav ul li {
+  float: left;
+  position: relative;
+  right: 50%;
+}
+#main-nav ul li a {
+	padding: 10px 25px;
+	display: block;
+	text-decoration: none;
+	color: #ccc;
+}
+
+#main-nav ul li a:hover {
+	background-color: #ccc;
+	color: #333;
+}
+#header #toplink {
+  text-decoration: none;
+	position: absolute;
+	top:-34px;
+	right: 10px;
+	color: white;
+  font-size: 1.8em;
+}
+
+#content-wrapper{
+  background-image: url("../images/repeating.png");
+  float: left;
+}
+
+#main-content {
+  min-height: 300px;
+	width: 715px;
+	margin-right: 30px;
+	float: left;
+	margin-left: 15px;
+}
+
+h2 strong {
+  font-size: 2em;
+  font-weight: 900;
+}
+
+.imageR {
+  float: right;
+  border: 2px solid blue;
+  width: 300px;
+  padding: 5px;
+  background-color: white;
+  margin: 10px 0 10px 20px;
+}
+
+#center {
+  width: 960px;
+  text-align: center;
+}
+
+#side-content {
+  min-height: 150px;
+  width: 200px;
+  float: left;
+}
+
+#footer {
+  background-color: #777;
+	height: 80px;
+	clear: both;
+}
